objects/Case.object
<CustomObject><fields>
        <fullName>Age__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Case_Reason1__c</fullName>
        <description>Custom Case Reason field was needed because standard picklist fields can't be dependent on others</description>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Complaint</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Results</fullName>
                </value>
                <value>
                    <fullName>Partner Engineering Issue</fullName>
                </value>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Web_and_registration</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>General Info</fullName>
                </value>
                <value>
                    <fullName>Transfer to Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>DNA Collection Kit - Inquiry</fullName>
                </value>
                <value>
                    <fullName>Web_and_registration_Inquiry</fullName>
                </value>
                <value>
                    <fullName>Service - Inquiry</fullName>
                </value>
                <value>
                    <fullName>Sample - Inquiry</fullName>
                </value>
                <value>
                    <fullName>Not Helix</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                    <isActive>false</isActive>
                    <label>Education</label>
                </value>
                <value>
                    <fullName>Platform</fullName>
                    <isActive>false</isActive>
                    <label>Platform</label>
                </value>
                <value>
                    <fullName>Platform - Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Platform - Inquiry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Case_Reason_Detail__c</fullName>
        <label>Case Reason Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Reason1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessioning failed sample</fullName>
                </value>
                <value>
                    <fullName>Accessioning hold sample</fullName>
                </value>
                <value>
                    <fullName>Account creation</fullName>
                </value>
                <value>
                    <fullName>Account settings</fullName>
                </value>
                <value>
                    <fullName>Am I registered?</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>App Results</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Billing or refund</fullName>
                </value>
                <value>
                    <fullName>Blank voicemail</fullName>
                </value>
                <value>
                    <fullName>Browser specifications</fullName>
                </value>
                <value>
                    <fullName>Can't sign in</fullName>
                </value>
                <value>
                    <fullName>Data deletion request</fullName>
                </value>
                <value>
                    <fullName>Data Error</fullName>
                </value>
                <value>
                    <fullName>Data ownership</fullName>
                </value>
                <value>
                    <fullName>Data privacy and security</fullName>
                </value>
                <value>
                    <fullName>Email other</fullName>
                </value>
                <value>
                    <fullName>E-mail spam</fullName>
                </value>
                <value>
                    <fullName>Email verification</fullName>
                </value>
                <value>
                    <fullName>Failed Sample</fullName>
                </value>
                <value>
                    <fullName>Forgot password</fullName>
                </value>
                <value>
                    <fullName>Helix.com - can't sign in</fullName>
                </value>
                <value>
                    <fullName>Helix Info</fullName>
                </value>
                <value>
                    <fullName>Hold sample</fullName>
                </value>
                <value>
                    <fullName>How to purchase</fullName>
                </value>
                <value>
                    <fullName>How to register</fullName>
                </value>
                <value>
                    <fullName>How to sign in</fullName>
                </value>
                <value>
                    <fullName>How to use</fullName>
                </value>
                <value>
                    <fullName>How to use platform</fullName>
                </value>
                <value>
                    <fullName>Kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Case_Reason_if_Other__c</fullName>
        <description>If Case Reason = "Other", Case Reason text goes here</description>
        <inlineHelpText>If Case Reason = "Other", please state the Case Reason here</inlineHelpText>
        <label>Case Reason (if Other)</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Check_Order_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Order Registration</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <description>Allows Agent to enter customer's email information while on the phone, since a Contact record won't always exist and the "Web Email" field isn't visible to the agent when creating a new Case</description>
        <label>Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>captures first name when case is submitted via web form</inlineHelpText>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Group_Assignment__c</fullName>
        <description>Which department contains the expertise to solve this case?</description>
        <inlineHelpText>Which department contains the expertise to solve this case?</inlineHelpText>
        <label>Group Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Has_been_closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Background  field. Workflow rule updates this when the Case is first closed, and it remains checked for the lifetime of the Case. This is to avoid sending a customer satisfaction survey regarding the same case twice.</description>
        <label>Has been closed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>captures last name when case is submitted via web form</inlineHelpText>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Order to this case, if applicable.</description>
        <inlineHelpText>Related Order to this case, if applicable.</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Partner__c</fullName>
        <description>Partner who escalated this Case to Helix</description>
        <inlineHelpText>Partner who escalated this Case to Helix. If origin = email, this should auto-populate with Partner name</inlineHelpText>
        <label>Partner</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Phone__c</fullName>
        <description>Allows Agents to enter customer's phone # while on a call, since there won't always be an associated Contact and the "web phone" field isn't visible when creating a new Case</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Web_Order_Confirmation_Number__c</fullName>
        <description>Order confirmation number indicated by Customer on web form</description>
        <inlineHelpText>Order confirmation number indicated by Customer on web form</inlineHelpText>
        <label>Web Order Confirmation Number</label>
        <length>15</length>
        <type>Text</type>
    </fields><fields>
        <fullName>created_date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>created date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>kit_registered__c</fullName>
        <description>Indicates if the Kit associated with the Case has been registered</description>
        <formula>NOT(ISBLANK(Order__r.Registered_By__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Has the Kit on the Order associated with this Case been registered?</inlineHelpText>
        <label>kit registered</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><sharingModel>Private</sharingModel><listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Last_Activity_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews><listViews>
        <fullName>All_Open_Support_Cases1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Last_Activity_Date__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>Integration Errors</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Waiting for Customer,Waiting for Case Owner</value>
        </filters>
        <label>CC - All Open Support Cases</label>
        <queue>Support</queue>
        <sharedTo>
            <group>Client_Services_Team</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>All_Support_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Waiting for Customer,Waiting for Case Owner</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>integration errors</value>
        </filters>
        <label>CC - All Open Cases</label>
        <sharedTo>
            <group>Client_Services_Team</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>All_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>Integration Errors</value>
        </filters>
        <label>CC - All Cases</label>
        <sharedTo>
            <group>Client_Services_Team</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>Cases_unregistered_kits</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>kit_registered__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Age__c</field>
            <operation>greaterOrEqual</operation>
            <value>3</value>
        </filters>
        <label>Cases with Unregistered Kits</label>
    </listViews><listViews>
        <fullName>Integration_Errors_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Order__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Integration Errors</label>
        <queue>Integration_Errors</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews><listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews></CustomObject>